tests/snapshots/run_wpt_conformance__coreml_triangular_float32_4D_tensor_fully_zero_options_diagonal_3.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
triangular.https.any.js triangular float32 4D tensor fully zero options.diagonal=3, coreml
 triangular :: triangular float32 4D tensor fully zero options.diagonal=3: index 0: actual=84.91946 expected=0 ulp=1118426819 tolerance=4
  inputs: triangularInput: [84.9194564819336, -86.21631622314453, 50.38116455078125, -98.47772216796876, -94.51172637939452, -21.42218589782715, 24.678754806518555, -50.355342864990234, -37.015724182128906, 97.25071716308594, 73.36241149902344, -75.12358856201172, 41.64348602294922, 58.862911224365234, -29.916187286376953, 67.48285675048828, 42.132598876953125, -70.27587127685547, 20.88446617126465, 71.37139892578125, -84.96932220458984, -88.97057342529297, 77.58269500732422, 91.03327178955078]
  expected triangularOutput: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)
  actual triangularOutput: [84.91946, -86.21632, 50.381165, -98.47772, -94.51173, -21.422186, 24.678755, -50.355343, -37.015724, 97.25072 ...] (len=24)
  expected triangularOutput full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])
  actual triangularOutput full nd:
[84.91946, -86.21632, 50.381165, -98.47772, -94.51173, -21.422186, 24.678755, -50.355343, -37.015724, 97.25072, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    triangularInput: f32[2, 2, 2, 3];
  }

  nodes {
    [triangularOutput] = triangular(triangularInput, diagonal=3, label="", upper=true);
  }

  outputs { triangularOutput; }
}
