tests/snapshots/run_wpt_conformance__coreml_triangular_float32_4D_tensor_options_diagonal_-1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float32 4D tensor options.diagonal=-1",
    "coreml",
    "PASS",
)
